--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "firebase": "^11.0.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
