--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
