--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Rohit",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "nodemon": "^3.1.7",
-    "socket.io": "^4.8.1"
+    "express": "^4.21.1",
+    "socket.io": "^4.8.1",
+    "vscode": "^1.1.37"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
