--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,18 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "firebase": "^11.0.2",
+    "monaco-languageclient": "^8.8.3",
+    "mongoose": "^8.8.1",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "vscode-ws-jsonrpc": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
