feat: added ai assistant and intutive ui

--- a/client/.env
+++ b/client/.env
@@ -6,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=27440046942
 NEXT_PUBLIC_FIREBASE_APP_ID=1:27440046942:web:82cec2639d4b14c534a5cf
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-G7LP8S7K8E
 NEXT_PUBLIC_SOCKET_URL=http://localhost:9310
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyB87wWrRqAMF4Cr2bV7r_Eaptw6Yqsn9ic
