fixed: duel system

--- a/judge0/docker-compose.yml
+++ b/judge0/docker-compose.yml
@@ -7,7 +7,7 @@ x-logging:
 
 services:
   server:
-    image: judge0/judge0:1.13.1
+    image: judge0/judge0:latest
     volumes:
       - ./judge0.conf:/judge0.conf:ro
     ports:
@@ -16,8 +16,8 @@ services:
     <<: *default-logging
     restart: always
 
-  workers:
-    image: judge0/judge0:1.13.1
+  worker:
+    image: judge0/judge0:latest
     command: ["./scripts/workers"]
     volumes:
       - ./judge0.conf:/judge0.conf:ro
