--- a/judge0/judge0.conf
+++ b/judge0/judge0.conf
@@ -56,7 +56,7 @@ ALLOWED_LANGUAGES_FOR_COMPILER_OPTIONS=
 # Default: true
 ENABLE_COMMAND_LINE_ARGUMENTS=
 
-# If enabled autorized users can delete a submission.
+# If enabled authorized users can delete a submission.
 # Default: false
 ENABLE_SUBMISSION_DELETE=
 
@@ -94,6 +94,11 @@ SUBMISSION_CACHE_DURATION=
 # homepage will be empty. You can always access the documentation page via /docs.
 # Default: false
 USE_DOCS_AS_HOMEPAGE=
+
+# If true Judge0 behaves such that base64_encoded=true is assumed by default if
+# not explicitly turned of with base64_encoded=false.
+# Default: false
+DISABLE_IMPLICIT_BASE64_ENCODING=
 
 
 ################################################################################
@@ -150,7 +155,7 @@ DISALLOW_IP=
 # query parameters. For example let AUTHN_HEADER=X-Judge0-Token and
 # AUTHN_TOKEN=mySecretToken. Then user should authenticate by sending this
 # in headers or query parameters in each request, e.g.:
-# https://api.judge0.com/system_info?X-Judge0-Token=mySecretToken
+# https://ce.judge0.com/system_info?X-Judge0-Token=mySecretToken
 
 # Specify authentication header name.
 # Default: X-Auth-Token
@@ -166,11 +171,11 @@ AUTHN_TOKEN=
 ################################################################################
 # Protected API calls can be issued with (AUTHZ_HEADER, AUTHZ_TOKEN) pair.
 # To see exactly which API calls are protected with authorization tokens
-# please read the docs at https://api.judge0.com.
+# please read the docs at https://ce.judge0.com.
 # API authorization ensures that only specified users call protected API calls.
 # For example let AUTHZ_HEADER=X-Judge0-User and AUTHZ_TOKEN=mySecretToken.
 # Then user should authorize be sending this in headers or query parameters in
-# each request, e.g.: https://api.judge0.com/system_info?X-Judge0-User=mySecretToken
+# each request, e.g.: https://ce.judge0.com/system_info?X-Judge0-User=mySecretToken
 # Note that if you enabled authentication, then user should also send valid
 # authentication token.
 
@@ -186,7 +191,7 @@ AUTHZ_TOKEN=
 ################################################################################
 # Redis Configuration
 ################################################################################
-# Specify Redis host
+# Specify Redis host.
 # Default: localhost
 REDIS_HOST=redis
 
@@ -197,6 +202,12 @@ REDIS_PORT=
 # Specify Redis password. Cannot be blank.
 # Default: NO DEFAULT! MUST BE SET!
 REDIS_PASSWORD=vQJYWmyWEaUZeZPGFKx4BUBg9yTrjMDn
+
+# Specify Resque namespace.
+# Default: Resque's default namespace
+# Example:
+# RESQUE_NAMESPACE=dev:resque
+RESQUE_NAMESPACE=
 
 
 ################################################################################
@@ -349,7 +360,7 @@ RAILS_ENV=
 RAILS_MAX_THREADS=
 
 # Specify how many processes will be created for handing requests. Each process
-# will aditionally create RAILS_MAX_THREADS threads.
+# will additionally create RAILS_MAX_THREADS threads.
 # Default: 2
 RAILS_SERVER_PROCESSES=
 
