--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1",
     "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
     "vscode": "^1.1.37"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9"
   }
 }
