--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
+    "redis": "^4.7.0",
     "redux": "^5.0.1",
     "socket.io-client": "^4.8.1",
     "uuid": "^11.0.3",
