--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
+    "bson": "^6.10.3",
     "firebase": "^11.0.2",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
