feat: final touch

--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.0",
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/papaparse": "^5.3.16",
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "bson": "^6.10.3",
@@ -23,6 +24,7 @@
     "mongoose": "^8.8.1",
     "next": "14.2.7",
     "nodemailer": "^6.10.0",
+    "papaparse": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
