--- a/judge0/judge0.conf
+++ b/judge0/judge0.conf
@@ -127,6 +127,8 @@ MAX_QUEUE_SIZE=
 # Example:
 # ALLOW_ORIGIN="www.judge0.com judge0.com www.example.com blog.example.com"
 ALLOW_ORIGIN=
+# ACCESS_CONTROL_ALLOW_CREDENTIALS=true
+
 
 # Disallow only specified origins.
 # If left blank, then no origin will be disallowed.
